# skillbridge

./: .gitignore  README.md  pyproject.toml  setup.py
skillbridge/: __init__.py
skillbridge/client/: channel.py  functions.py  globals.py  hints.py  objects.py  remote.py  translator.py  var.py  workspace.py
skillbridge/server/: python_server.il  python_server.py  python_server.py~
tests/: integration.py
